# unisub

./: Cargo.toml  LICENSE  README.md
.sqlx/: query-094834a3edec293fc466b682f6f485707f83d891fb329505809520f09351afa3.json  query-54b95911a18323ad34513ed9229f9e5c259b690275bb86a25d5138b2c59d38a3.json  query-6adcbed4739bdb6790135d9fa6e7c81159103634a7ff20f3433d4c1836fe8a24.json  query-73ec999f0ce092e416fe440e7d3793c993c3c0ccbe3f19a63eeae5e3878bb496.json  query-8804ef84ee32915810d7e93bdd91dccbf44e215e7dc7c0f792a142a50b51d5a8.json  query-99331506937bc95a9e6621157fa4e601e0bd95dfcf48a3764eddc7a4b2ccb80a.json  query-b6d886c1a249d902b78b339802eedb0fbca9415efce19cd5858a793977ca75bf.json  query-ba9754a027397a927c09b1b84a8fc107bfb284bb03cd217f43ebd01cba0b121a.json  query-d8799925a607e09487906e1a6445d22c03594197908dc0ec7f9b609446c3f6e2.json
examples/: bincoded.rs
migrations/: 000_init.sql
src/: lib.rs
tests/: integration.rs
