[package]
name = "unisub"
version = "0.1.0"
edition = "2018"
description = "A Pub/Sub library for Rust backed by Postgres"
authors = ["Nicholas Rempel <nbrempel@gmail.com>"]
license = "MIT"
repository = "https://github.com/nrempel/unisub"
homepage = "https://nrempel.com"
documentation = "https://docs.rs/unisub"
keywords = ["pub-sub", "rust", "postgres"]
categories = ["asynchronous", "database"]
include = ["src/**/*", "migrations/**/*"]
readme = "README.md"

[[bin]]
name = "unisub"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.9"

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
